# religion-one

./: .gitignore  README.md  pyproject.toml
logs/: conversation_log_2025-02-03.jsonl
src/ai_project/: __init__.py
src/religion_one_thinking/: description.txt  main.py  thesis.txt
src/religion_one_thinking/discussion/: orchestrator.py
src/religion_one_thinking/thinkers/: __init__.py  base_thinker.py  deepseek_thinker.py  gemini_thinker.py  gpt4o_thinker.py
src/religion_one_thinking/utils/: context_manager.py  logger.py
src/religion_one_thinking/visualization/: __init__.py  app.py  run_server.py
src/religion_one_thinking/visualization/templates/: conversation.html  index.html
tests/: test_basic.py
