[tool.poetry]
name = "religion-one-thinking"
version = "0.1.0"
description = "A Python-based AI religious thinking project"
authors = ["Thomas Yu <thomas.yu@knn3.xyz>"]
readme = "README.md"
packages = [{include = "religion_one_thinking", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
pydantic = "^2.0.0"
asyncio = "^3.4.3"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.ml.dependencies]
torch = { version = "^2.0.0", optional = true }

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
religion-one = "religion_one_thinking.main:main" 